Bug 1760625 - Tagpicker Dark Mode r=thecount
Differential Revision: https://phabricator.services.mozilla.com/D141874

UltraBlame original commit: a0fb1ac48e0e09c42553595df8c4a8f422deb687

--- a/browser/components/pocket/content/panels/css/main.compiled.css
+++ b/browser/components/pocket/content/panels/css/main.compiled.css
@@ -11197,6 +11197,25 @@ in
 out
 ;
 }
+body
+.
+theme_dark
+.
+stp_tag_picker
+.
+stp_tag_picker_tag
+{
+background
+:
+#
+2B2A33
+;
+color
+:
+#
+FBFBFB
+;
+}
 .
 stp_tag_picker
 .
@@ -11218,6 +11237,20 @@ weight
 400
 ;
 }
+body
+.
+theme_dark
+.
+stp_tag_picker
+.
+stp_tag_picker_tag_remove
+{
+color
+:
+#
+8F8F9D
+;
+}
 .
 stp_tag_picker
 .
@@ -11231,16 +11264,66 @@ color
 bbb
 ;
 }
+body
+.
+theme_dark
+.
+stp_tag_picker
+.
+stp_tag_picker_tag_duplicate
+{
+background
+-
+color
+:
+#
+666
+;
+}
 .
 stp_tag_picker
 .
 stp_tag_picker_input
 {
-flex
--
-grow
+border
 :
-1
+1px
+solid
+#
+8F8F9D
+;
+border
+-
+radius
+:
+3px
+;
+padding
+:
+6px
+;
+width
+:
+100
+%
+;
+}
+body
+.
+theme_dark
+.
+stp_tag_picker
+.
+stp_tag_picker_input
+{
+background
+:
+none
+;
+color
+:
+#
+FBFBFB
 ;
 }
 .
