--- a/browser/components/pocket/content/panels/js/components/TagPicker/TagPicker.scss
+++ b/browser/components/pocket/content/panels/js/components/TagPicker/TagPicker.scss
@@ -151,6 +151,20 @@ in
 -
 out
 ;
+include
+theme_dark
+{
+background
+:
+#
+2B2A33
+;
+color
+:
+#
+FBFBFB
+;
+}
 }
 .
 stp_tag_picker_tag_remove
@@ -170,6 +184,15 @@ weight
 :
 400
 ;
+include
+theme_dark
+{
+color
+:
+#
+8F8F9D
+;
+}
 }
 .
 stp_tag_picker_tag_duplicate
@@ -181,15 +204,55 @@ color
 #
 bbb
 ;
+include
+theme_dark
+{
+background
+-
+color
+:
+#
+666
+;
+}
 }
 .
 stp_tag_picker_input
 {
-flex
--
-grow
+border
 :
-1
+1px
+solid
+#
+8F8F9D
 ;
+border
+-
+radius
+:
+3px
+;
+padding
+:
+6px
+;
+width
+:
+100
+%
+;
+include
+theme_dark
+{
+background
+:
+none
+;
+color
+:
+#
+FBFBFB
+;
+}
 }
 }
